# Game-Save-Utility

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
docs/releases/: v0.1.2.md
scripts/: build-release.ps1
src/: app.rs  archive.rs  backup.rs  cloud.rs  config.rs  fs_utils.rs  help.rs  i18n.rs  logger.rs  main.rs  models.rs  presets.rs  scheduler.rs  snapshot.rs  steam.rs  tray.rs
src/ui/: backup_list.rs  dialogs.rs  game_list.rs  mod.rs
