[package]
name = "game-save-utility"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
eframe = "0.27"
opener = "0.7"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"
winapi = { version = "0.3.9", features = ["libloaderapi", "shellapi", "windef", "winuser"] }
winreg = "0.52"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
